# proplang

./: PropLang.cabal  README.md  Sample.hs  connected.glade  connected.hs  make.bat  push.bat  sample.glade
PropLang/: Event.hs  Gtk.hs  Value.hs  Variable.hs
